Fixed broken line height (was visible sometimes)

--- a/styles/atomdo.less
+++ b/styles/atomdo.less
@@ -6,7 +6,7 @@ atom-text-editor::shadow, atom-text-editor {
         color: @text-color-warning;
         font-weight: bold;
         font-size: 120%;
-        line-height: 150%;
+        line-height: 120%;
     }
     &.marker { color: @text-color-subtle; }
     &.attribute { color: @text-color-info; }
